@@ -46,6 +46,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2009-12-03: Simon Goldschmidt
+  * tcp.h, tcp_in.c, tcp_out.c: Fixed bug #28106: dup ack for fast retransmit
+    could have non-zero length
+
   2009-12-02: Simon Goldschmidt
   * tcp_in.c: Fixed bug #27904: TCP sends too many ACKs: delay resetting
     tcp_input_pcb until after calling the pcb's callbacks
